@@ -111,4 +111,5 @@ USER om-webserver
 CMD java --add-opens java.base/java.util=ALL-UNNAMED \
          --add-opens java.base/java.lang=ALL-UNNAMED \
          --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
+         --add-opens java.base/java.io=ALL-UNNAMED \
          -jar ${WORKSPACE}/target/om-webserver.jar --spring.config.location=${APPLICATION_PATH}
